  - Add in forwards compatibilty for server which update to the forthcoming custom townblocks, but then downgrade.
0.97.5.4:
  - Added Custom TownBlockTypes, courtesy of Warriorrrr with PR #5388.
    - TownBlocks are now able to be created in the config and also via other plugins that use our API.
    - All of the previous townblocktypes will be imported to the new config section.
    - Each TownBlockType has a name, cost, tax, map character, itemuse list, switch list, and allowed blocks list.
  - New Command: /towny allowedblocks 
    - Used to display what blocks are permitted to be used on TownBlockTypes.
  - Removed Command: /towny farmblocks
    - Replaced with /towny allowedblocks.
  - Fix towns.ranks and nations.ranks missing from the Townyperms.yml's vital groups.
  - Fix for SQL schema and new townblock type-saving.
  - Fix support for spigot 1.18.1 enabling yaml comments by default.
    - Closes #5559.
  - Only apply the outsiders prevent pvp toggle when enabling pvp, courtesy of Warriorrrr with PR #5560.
0.97.5.5:
  - Replace some methods in TownyPerms with clearer method names.
  - Fix switch id lists not accepting item groups in the custom townblocks lists, and some switches not being added.
    - Closes #5569.
0.97.5.6:
  - Overhaul of CommentedConfiguration, adding support for old and new versions of Bukkit servers.
    - Servers not running up-to-date MC 1.18.1 implementations might see some multi-lining in their chatconfig.yml, which isn't an actual issue. 
0.97.5.7:
  - Fix redundant permission node tests in Towny command.
  - Add child nodes to towny.command.towny.top command.
    - Closes #5580.
  - New permission node: 
    - towny.command.towny.top.*
      - Child Node of towny.command.towny.top
      - Children: - towny.command.towny.top.residents
                  - towny.command.towny.top.land
                  - towny.command.towny.top.balance
  - Undo change to TownyEconomyHandler which prevented CMI working.